                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2018-06-20
 * Use MooseX::NonMoose to convert Wing::DB::Result and set defaults.

2018-06-19
 * Migrate Wing to use the latest Perl (5.26.2) and modules.
 * Removed start_web.sh (and related scripts) in favor of wing commands.
    wing web --start
    wing web --stop
    wing rest --start
    wing rest --stop
 * Moose "around" wrappers on DBIx::Class methods are no longer executed at instanciation time. But they are executed at every other time.
 * Added wing command to start and stop wingman.
    wing wingman --start
    wing wingman --restart
    wing wingman --stop
    wing wwingman --start --watchself

2018-04-30
 * Change X-HTTP-Real-IP in nginx.conf to use $http_x_forwarded_for instead of $remote_addr to be compatible with Amazon load balancer.
 * Added last_op to lib/Wing/Role/User.pm
 * Will need to do a DB upgrade on app.

2018-04-18
 * Notify about cookies.

2018-04-10
 * Added 2-factor authentication for GDPR compliance.
 * NOTE: You need to add var/init/var/mkits/secondary_auth.mkit to your mkits.

2018-04-04
 * Better error handling in wing.object and wing.object_list in wing.vue.js.
 * Added new round() filter to wing.vue.js.
 * wing.object and wing.object_list now have fetch_api, list_api, and create_api exposed as properties.

2018-03-30
 * Added wing.vue.js get_query_param().
 * Fixed a search bug in var/ideas/index.tt.

2018-03-23
 * Converted UI to use Vue 2 and Bootstrap 4.
 * Read angular2vue.txt for migration details.
 * Now requires: Template::Plugin::JSON::Escape

2018-2-13
 * If Role::Field options returns undef then don't validate it.

2018-2-12
 * Don't double encode HTML entities.

2018-2-8
 * Autokick all jobs in all tubes in the current wingman server

2018-1-16